--- a/style/new-year.css
+++ b/style/new-year.css
@@ -14,7 +14,7 @@ header {
 .header {
     text-align: right;
     padding-top: 200px;
-    padding-right: 150px;
+    padding-right: 200px;
     color: aliceblue;
     padding-bottom: 200px;
 }
@@ -22,14 +22,14 @@ header {
 .head {
     text-align: right;
     padding-bottom: 20px;
-    padding-left: 800px;
+    padding-left: 850px;
     font-family: serif;
     font-size: 60px;
 }
 
 .header-description {
     text-align: right;
-    padding-left: 800px;
+    padding-left: 900px;
     padding-bottom: 20px;
     font-size: 22px;
 }
@@ -68,3 +68,23 @@ header {
 .description {
     font-size: 20px;
 }
+
+
+             /* My Plans */
+
+
+            .plan-container{display:flex;
+             margin-top: 100px; gap: 20px; margin-bottom: 80px;margin : 0px 150px
+        }
+
+        .my-plans{ text-align: center; margin-top:100px ; margin-bottom: 80px; margin-left: 200px; font-size: 50px;}
+
+               .plan{
+             box-shadow:0px 2px 2px 0px ;
+            border-radius:8px ;
+            padding: 80px;
+            }
+
+            .plan-title{font-size: 28px; margin-bottom: 20px;}
+
+            .plan-description{ font-size: 18px;}
