--- a/style/new-year.css
+++ b/style/new-year.css
@@ -88,3 +88,48 @@ header {
             .plan-title{font-size: 28px; margin-bottom: 20px;}
 
             .plan-description{ font-size: 18px;}
+                      
+
+                  /* image */
+
+            .img{ background:url(../images/gradient1.png) ,url(../images/watch.png);background-repeat: no-repeat;margin-left:200px ; margin-top: 150px; padding-bottom: 300px; align-items: center;}
+
+            .title-1{font-size: 50px; padding-left: 50px; padding-top:50px ;padding-bottom: 20px;}
+
+            .btn-primary-1{ margin-left: 50px; font-weight: 700;
+                font-size: 20px;
+                padding: 16px 26px;
+                color: rgba(0, 100, 215, 1);
+                border-radius: 5px;
+                border: 0;}
+
+
+                /* Bottom */
+                
+                .bottom{ display: flex; background-color:rgba(21, 20, 20, 1);color:white;
+                padding-top: 150px; padding-bottom: 100px;}
+
+                .bottom-2{ padding-left: 200px;}
+
+                .bottom-head{ padding-bottom: 20px;font-size: 50px;}
+
+                .description-1{ padding-right: 500px; padding-bottom: 20px; font-size: 20px;}
+
+                img{ border-radius: 50px; padding-top: 20px; gap: 50px;}
+                
+              
+                .email{ padding-bottom: 20px; font-size: 18px;}
+
+                .bottom-3{ margin-right:  300px;padding: 130px 200px;
+                    text-decoration: none}
+
+              
+              .bottom-1{ font-size: 45px; margin-bottom: 20px;}
+
+                .btn-primary-2{  font-weight: 700; margin-top: 20px;
+                    font-size: 20px;
+                    padding: 15px 20px;
+                    background: rgba(0, 100, 215, 1);
+                    color: rgb(250, 250, 250);
+                    border-radius: 7px;
+                    border: 0; }
